[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llmgateways"
version = "0.1.0"
description = "Protect OpenAI and Anthropic API calls from prompt injection, jailbreaks, and data-extraction attacks."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "LLM Gateways", email = "hello@llmgateways.com" }]
keywords = ["llm", "security", "prompt-injection", "openai", "anthropic", "ai-safety"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.25"]
all = ["openai>=1.0", "anthropic>=0.25"]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "httpx>=0.27"]

[project.urls]
Homepage = "https://llmgateways.com"
Documentation = "https://llmgateways.com/docs"
Repository = "https://github.com/Eirene2015/llmgateways-python-sdk"
"Bug Tracker" = "https://github.com/Eirene2015/llmgateways-python-sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["llmgateways"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
